fix flex alignment on chart-controls

--- a/src/assets/scss/components/detail-charts.scss
+++ b/src/assets/scss/components/detail-charts.scss
@@ -61,7 +61,7 @@
 .chart-controls {
   display: flex;
   gap: 8px;
-  align-items: center;
+  align-items: flex-end;
 
   @include f.respond(medium) {
     display: flex;
